# flet_code_editor

./: README.md  pyproject.toml
examples/codeeditor_example/: pyproject.toml
examples/codeeditor_example/src/: main.py
src/codeeditor/: __init__.py  codeeditor.py
src/codeeditor.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/flutter/codeeditor/: pubspec.yaml
src/flutter/codeeditor/lib/: codeeditor.dart
src/flutter/codeeditor/lib/src/: codeeditor.dart  create_control.dart
